latex.treetop
require './data.rb'
require './translate.rb'

module LatexToUnicode
  grammar Latex
    rule expression
      ( unary / bracketed / atoms )* {
        def value
          elements.map {|x| x.value }.join
        end
      }
    end

    rule unary
      unary_command element {
        def value
          set = case unary_command.text_value
                when '_' then LatexToUnicode::SUBSCRIPTS
                when '^' then LatexToUnicode::SUPERSCRIPTS
                end
          LatexToUnicode::translate(element.value, set)
        end
      }
    end

    rule unary_command
      '^' / '_'
    end

    rule element
      bracketed / atom
    end

    rule bracketed
      '{' atoms '}' {
        def value
          atoms.value
        end
      } 
    end

    rule atoms
      atom+ {
        def value
          text_value
        end
      }
    end

    rule atom
      [^{}\^_] {
        def value
          text_value
        end
      }
    end
  end
end
